syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";

message SumRequest {
    Sum sum = 1;
}

message Sum {
    int64 num1 = 1;
    int64 num2 = 2;
}

message SumResponse {
    int64 result = 1;
}

message ReturnPrimesRequest {
    int64 num = 1;
}

message ReturnPrimesResponse {
    int64 result = 1;
}

message ComputeAverageRequest {
    int64 num = 1;
}

message ComputeAverageResponse {
    int64 result = 1;
}

service CalculatorService {

    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {}

    //Server streaming
    rpc ReturnSmallerPrimes(ReturnPrimesRequest) returns (stream ReturnPrimesResponse) {}

    // Client side streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}
}